@@ -103,9 +103,16 @@ tasks.register<JavaExec>("runDesktop") {
     dependsOn("cacheRuntimeLibs")
     group = "application"
     mainClass.set("de.fabmax.kool.demo.MainKt")
+
+    var customJvmArgs = listOf(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--enable-native-access=ALL-UNNAMED"
+    )
+
     if (OperatingSystem.current().isMacOsX) {
-        jvmArgs = listOf("-XstartOnFirstThread")
+        customJvmArgs += listOf("-XstartOnFirstThread")
     }
+    jvmArgs = customJvmArgs
 
     kotlin {
         val main = targets["desktop"].compilations["main"]
